Fix quote section so that the attribution maintains proper alignment

--- a/style.css
+++ b/style.css
@@ -111,11 +111,17 @@ button, a,
     padding: 64px 0;
 }
 
+.quote-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
 .quote-text {
     color: #1F2937;
     font-size: 36px;
     font-style: italic;
-    width: 60%;
+    margin-bottom: 0;
 
 }
 
@@ -123,7 +129,7 @@ button, a,
     font-weight: 800;
     display: flex;
     align-self: flex-end;
-    margin-right: 280px;
+    margin-right: 30px;
 }
 
 .call-to-action {
